src/test/ui/iterators/ptr-range.stderr
error[E0277]: the trait bound `*const i32: Step` is not satisfied
  --> $DIR/ptr-range.rs:3:14
   |
LL |     for _ in range {}
   |              ^^^^^ the trait `Step` is not implemented for `*const i32`
   |
   = note: required because of the requirements on the impl of `Iterator` for `std::ops::Range<*const i32>`
   = note: required because of the requirements on the impl of `IntoIterator` for `std::ops::Range<*const i32>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
